--- a/style.css
+++ b/style.css
@@ -37,7 +37,15 @@
   -webkit-transition: .4s;
   transition: .4s;
 }
+.dropdown {
+      background-color: transparent;
+    background-repeat: no-repeat;
+    border: none;
+    cursor: pointer;
+    overflow: hidden;
+    outline: none;
 
+}
 .slider:before {
   position: absolute;
   content: "";
@@ -63,7 +71,9 @@ input:checked + .slider:before {
   -ms-transform: translateX(26px);
   transform: translateX(26px);
 }
-
+.dropdown-content {
+    display: none;
+}
 /* Rounded sliders */
 .slider.round {
   border-radius: 34px;
@@ -95,4 +105,8 @@ input:checked + .slider:before {
     padding: 10px;
     box-shadow: 0 2px 10px rgba(0,0,0,0.1);
     z-index: 1000;
+}
+
+.main {
+    margin: 20px;
 }
